<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/image_process">

    <TextView
            android:text="@string/depthlabel"
            android:layout_width="295dp"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView14"/>
    <TextView
            android:text="@string/depth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView14"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView7" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/labelmodeldigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/labelmodel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.309" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="421dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="288dp"/>
    <Button
            android:text="@string/solve"
            android:layout_width="120dp"
            android:layout_height="wrap_content" android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="@+id/grid" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="357dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="326dp"/>
    <Button
            android:text="@string/abort"
            android:layout_width="120dp"
            android:layout_height="wrap_content" android:id="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/grid"
            android:layout_marginStart="160dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="357dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="326dp"/>
    <TextView
            android:text="@string/labelparseddigits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView7" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/labelparsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="20dp"/>
    <TextView
            android:text="@string/solution"
            android:layout_width="295dp"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/solutionlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView9"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView14"
            app:layout_constraintTop_toBottomOf="@+id/textView13" android:layout_marginTop="20dp"/>
    <androidx.gridlayout.widget.GridLayout
            android:layout_width="280dp"
            android:layout_height="280dp"
            app:rowCount="4" app:columnCount="4" app:alignmentMode="alignMargins"
            android:id="@+id/grid" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="415dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:useDefaultMargins="true">
        <Button
                android:text="@string/_00"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="0" app:layout_column="0"
                android:id="@+id/button10" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_04"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="1" app:layout_column="0"
                android:id="@+id/button14" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="2" app:layout_column="0"
                android:id="@+id/button18" app:layout_rowWeight="1" app:layout_columnWeight="1"
                android:text="@string/_08"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_12"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="3" app:layout_column="0"
                android:id="@+id/button22" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_01"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="0" app:layout_column="1"
                android:id="@+id/button11" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_02"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="0" app:layout_column="2"
                android:id="@+id/button12" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_03"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="0" app:layout_column="3"
                android:id="@+id/button13" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_07"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="1" app:layout_column="3"
                android:id="@+id/button17" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_11"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="2" app:layout_column="3"
                android:id="@+id/button21" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_15"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="3" app:layout_column="3"
                android:id="@+id/button25" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_05"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="1" app:layout_column="1"
                android:id="@+id/button15" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_06"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="1" app:layout_column="2"
                android:id="@+id/button16" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_09"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="2" app:layout_column="1"
                android:id="@+id/button19" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_10"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="2" app:layout_column="2"
                android:id="@+id/button20" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_13"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="3" app:layout_column="1"
                android:id="@+id/button23" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
        <Button
                android:text="@string/_14"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_row="3" app:layout_column="2"
                android:id="@+id/button24" app:layout_rowWeight="1" app:layout_columnWeight="1"
                app:layout_gravity="fill"/>
    </androidx.gridlayout.widget.GridLayout>
    <TextView
            android:text="@string/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="315dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="394dp" app:layout_constraintStart_toStartOf="@+id/grid"/>

</androidx.constraintlayout.widget.ConstraintLayout>