<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constraintLayout">
    <TextView
            android:text="@string/box2"
            android:layout_width="309dp"
            android:layout_height="212dp" android:id="@+id/textView4"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="443dp"/>
    <TextView
            android:text="@string/box4"
            android:layout_width="300dp"
            android:layout_height="80dp" android:id="@+id/textView5"
            android:textSize="14sp" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="558dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="93dp"/>
    <Button
            android:text="@string/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textSize="16sp"
            android:text="@string/box3"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="308dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="401dp"/>
    <TextView
            android:text="@string/box1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:textSize="20sp" android:textStyle="bold"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="669dp"/>
    <Button
            android:text="@string/button"
            android:layout_width="50dp"
            android:layout_height="wrap_content" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="296dp" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView10"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintTop_toBottomOf="@+id/textView15" android:layout_marginTop="12dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView15"
            android:text="@string/icon_by_prosymbols_modifed" android:textSize="14sp"
            android:textColor="#5151C5" android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.492"/>
</androidx.constraintlayout.widget.ConstraintLayout>